# 9cc-cpp

./: .gitignore  CMakeLists.txt  test.sh
src/: 9cc.hpp  codegen.cpp  main.cpp  parse.cpp  token.cpp  util.cpp
test/: CMakeLists.txt
test/src/: parse_test.cpp
